# sparseOp

./: CMakeLists.txt  README.md
dataStructure/: CMakeLists.txt
dataStructure/include/: Constants.h  Graph.h  SparseMatrix.h  Vector.h
dataStructure/src/: SparseMatrix.cpp  Vector.cpp
helper/: CMakeLists.txt  mmio.cpp  mmio.h
matrix/: b1_ss.mtx  b1_ss_b_sparse.mtx  testA.mtx  testA_b_sparse.mtx  testB.mtx  testB_b_sparse.mtx
solver/: CMakeLists.txt
solver/include/: TriangularParallelSolver.h  TriangularSolver.h
solver/src/: TriangularSolver.cpp
test/: CMakeLists.txt  main.cpp
